--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!-- saved from url=(0049)https://getbootstrap.com/docs/4.3/examples/album/ -->
-<html lang="en">
+<html lang="es">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
   <title>eMercado - Todo lo que busques está aquí</title>
 
 
@@ -17,17 +16,17 @@
 <body class="text-center">
   <form class="form-signin" action="menuprincipal.html">
 <img class="mb-4" src="img/loginicon.png" alt="Logo Ceibal" width="72" height="72">
-<h1 class="h3 mb-3 font-weight-normal">Iniciar Sesion</h1>
-<label for="inputEmail" class="sr-only">Email address</label>
-<input type="email" id="inputEmail" class="form-control" placeholder="Correo Electronico" required autofocus>
-<label for="inputPassword" class="sr-only">Password</label>
+<h1 class="h3 mb-3 font-weight-normal">Iniciar sesion</h1>
+<label for="inputEmail" class="sr-only">Correo electronico</label>
+<input type="email" id="inputEmail" class="form-control" placeholder="Correo electronico" required autofocus>
+<label for="inputPassword" class="sr-only">Contraseña</label>
 <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
 <div class="checkbox mb-3">
   <label>
-    <input type="checkbox" value="remember-me"> Recuerdame
+    <input type="checkbox" value="Recuerdame"> Recuerdame
   </label>
 </div>
-<button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar Sesion</button>
+<button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar sesion</button>
 </form>
 </body>
 </html>
